--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <title>ZurbDeviseMongoid</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+	<meta charset="utf-8" />
+	
+	<!-- Uncomment to make IE8 render like IE7 -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+	
+	<!-- Set the viewport width to device width for mobile -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
+	<title><%= content_for?(:title) ? yield(:title) : "Zurb Foundatin , Devise and Mongoid mogoid app " %></title>
+  
+	<!-- Included CSS Files -->
+	<%= stylesheet_link_tag    "application" %>
+	
+	<!-- Included JS Files  -->
+	<%= javascript_include_tag "application" %>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<!-- Header Content -->
+	<header>
+	  <div class="container">
+	  
+	    <div class="row">
+	      <div class="three columns">
+	        <%= link_to image_tag("http://placehold.it/200x60",:size=>"200x60" ,:alt=>"Home Page"), root_path %>
+	      </div>
+	      <div class="nine columns">
+	        <nav>
+	          <ul>
+	            <li><%= link_to "Home Page", root_path %></li>
+	            <li><%= link_to " About Us ", root_path %></li>
+	          </ul>
+	        </nav>
+	      </div>
+	    </div>
+	  
+	  </div>
+	</header>
+    <div class="row">
+    	<div class="twelve columns">
+    		<%= yield %>
+    	</div>
+    </div>
 </body>
 </html>
