change theme labels , some authentication

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,9 +21,9 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content,:class=>"twelve" %>
+    <%= f.text_area :content,:class=>"twelve", :rows=>5 %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"button" %>
   </div>
 <% end %>
