--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,17 @@
 	      <div class="nine columns">
 	        <nav>
 	          <ul>
-	            <li><%= link_to "Home Page", root_path %></li>
-	            <li><%= link_to " Posts ", posts_path %></li>
+	            <li><%= link_to "Home ", root_path %></li>
+	             <% if user_signed_in? %>
+	             <li><%= link_to " Posts ", posts_path %></li>
+	             <li><%= link_to "My Information", edit_user_registration_path %></li>
+	             <li><%= link_to "Sign Out", destroy_user_session_path , :method=>:delete, :confirm=>"Confirm  Sign Out" %></li>
+	             <% else %>
+	             <li><%= link_to "Sign Up", new_user_registration_path %></li>
+	             <li><%= link_to "Sign In", new_user_session_path %></li>
+	             <% end %>
+
+
 	          </ul>
 	        </nav>
 	      </div>
